--- a/huh/MainWindow.xaml
+++ b/huh/MainWindow.xaml
@@ -361,7 +361,9 @@
                     <StackPanel Name="spValue" Visibility="Collapsed">
                         <StackPanel Orientation="Horizontal">
                             <Label Content="Enter name of graph:" Foreground="White" FontSize="14" Margin="10" />
-                            <TextBox Name="tbGraphName" Padding="5" Foreground="White" Background="Transparent" BorderBrush="#FFC143" Width="90" Height="30">
+                            <TextBox Name="tbGraphName" Padding="5" Foreground="White" 
+                                     Background="Transparent" BorderBrush="#FFC143" 
+                                     Width="90" Height="30">
                                 <TextBox.Resources>
                                     <Style TargetType="Border">
                                         <Setter Property="CornerRadius" Value="5"/>
@@ -371,7 +373,9 @@
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <Label Content="Enter value of graph:" Foreground="White" FontSize="14" Margin="10" />
-                            <TextBox Name="tbGraphValue" Padding="5" Foreground="White" Background="Transparent" BorderBrush="#FFC143" Width="90" Height="30">
+                            <TextBox Name="tbGraphValue" Padding="5" Foreground="White" 
+                                     Background="Transparent" BorderBrush="#FFC143" 
+                                     Width="90" Height="30">
                                 <TextBox.Resources>
                                     <Style TargetType="Border">
                                         <Setter Property="CornerRadius" Value="5"/>
