--- a/huh/MainWindow.xaml
+++ b/huh/MainWindow.xaml
@@ -3,20 +3,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:huh"
+        xmlns:syncfusion="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF" 
+        xmlns:charting="using:Syncfusion.UI.Xaml.Charts"
         mc:Ignorable="d"
-        Title="Creating Diagramms" Height="650" Width="800" ResizeMode="NoResize" WindowStyle="None"  Background="#140115" Icon="Images/graph.png">
+        Title="Creating Diagramms" Height="1000" Width="1000" ResizeMode="NoResize" WindowStyle="None"  Background="#140115" Icon="Images/graph.png">
+    <Window.Resources>
+        <Style TargetType="TextBox">
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Width" Value="90"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="BorderBrush" Value="#FFC143"/>
+        </Style>
+        <Style TargetType="Label">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+        <Style TargetType="Border">
+            <Setter Property="CornerRadius" Value="5"/>
+        </Style>
+    </Window.Resources>
+    <!--<Window.DataContext>
+        <local:ViewGraph/>
+    </Window.DataContext>-->
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300"/>
-            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="600"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <!--DONT FORGET ABOUT VISIBILITY-->
+        
+            <!--DONT FORGET ABOUT VISIBILITY-->
         <StackPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Button Name="btnClose" BorderThickness="0" Click="btnClose_Click" Margin="10"  Background="Transparent">
                 <StackPanel>
@@ -95,7 +118,7 @@
 
 
             <StackPanel Name="spSettings" Height="520">
-                
+
                 <!--StackPanel with buttons for type of charts-->
                 <StackPanel Name="spTypyOfDiagram">
                     <Label Content="Choose type of diagram:" Foreground="White" FontSize="18" Margin="15,10,10,10"/>
@@ -312,7 +335,7 @@
                         </Button>
                     </StackPanel>
                 </StackPanel>
-                
+
                 <!--StackPanel for manual input-->
                 <StackPanel Name="spManualInput" Orientation="Vertical" Visibility="Collapsed">
                     <StackPanel Orientation="Horizontal">
@@ -358,8 +381,9 @@
                             </Button.Resources>
                         </Button>
                     </StackPanel>
-                    <StackPanel Name="spValue" Visibility="Collapsed">
-                        <StackPanel Orientation="Horizontal">
+                    
+                <StackPanel Name="spValue" Visibility="Collapsed">
+                        <!--<StackPanel Orientation="Horizontal">
                             <Label Content="Enter name of graph:" Foreground="White" FontSize="14" Margin="10" />
                             <TextBox Name="tbGraphName" Padding="5" Foreground="White" 
                                      Background="Transparent" BorderBrush="#FFC143" 
@@ -381,47 +405,49 @@
                                         <Setter Property="CornerRadius" Value="5"/>
                                     </Style>
                                 </TextBox.Resources>
-                            </TextBox>
-                        </StackPanel>
+                            </TextBox>-->
+                        <!--</StackPanel>-->
+                    </StackPanel>
+                    
+                    <!--StackPanel for create button-->
+                    <StackPanel x:Name="spBtnCreate" Visibility="Collapsed">
+                        <Button Name="btnCreate" ToolTip="Create Diagram" BorderThickness="0" Click="btnCreate_Click" Margin="5"  Background="Transparent">
+                            <StackPanel>
+                                <Image Source="Images/magic-wand.png" Width="40"/>
+                            </StackPanel>
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="RenderTransform">
+                                                <Setter.Value>
+                                                    <ScaleTransform ScaleX="1.2" ScaleY="1.2"/>
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="Button">
+                                                        <Grid Background="{TemplateBinding Background}">
+                                                            <ContentPresenter HorizontalAlignment="Center"
+                                     VerticalAlignment="Center"/>
+                                                        </Grid>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                            <Button.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="10"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
                     </StackPanel>
                 </StackPanel>
-                
-                <!--StackPanel for create button-->
-                <StackPanel>
-                    <Button Name="btnCreate" ToolTip="Create your Diagram" BorderThickness="0" Click="btnCreate_Click" Margin="15,10,10,10"  Background="Transparent" Visibility="Collapsed">
-                        <StackPanel>
-                            <Image Source="Images/magic-wand.png" Width="40"/>
-                        </StackPanel>
-                        <Button.Style>
-                            <Style TargetType="Button">
-                                <Style.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="RenderTransform">
-                                            <Setter.Value>
-                                                <ScaleTransform ScaleX="1.2" ScaleY="1.2"/>
-                                            </Setter.Value>
-                                        </Setter>
-                                        <Setter Property="Template">
-                                            <Setter.Value>
-                                                <ControlTemplate TargetType="Button">
-                                                    <Grid Background="{TemplateBinding Background}">
-                                                        <ContentPresenter HorizontalAlignment="Center"
-                                                                             VerticalAlignment="Center"/>
-                                                    </Grid>
-                                                </ControlTemplate>
-                                            </Setter.Value>
-                                        </Setter>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                        <Button.Resources>
-                            <Style TargetType="Border">
-                                <Setter Property="CornerRadius" Value="10"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-                </StackPanel>
+
+
 
                 <!--StackPanel for back button-->
                 <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
@@ -459,10 +485,35 @@
                         </Button.Resources>
                     </Button>
                 </StackPanel>
-                
+
             </StackPanel>
         </StackPanel>
-        <StackPanel Name="ChartSP" Grid.Column="1" Grid.Row="1">
+
+        
+
+        <StackPanel Name="ChartSP" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+
+            <StackPanel Name="spPieChart" Visibility="Collapsed">
+                
+            </StackPanel>
+
+            <StackPanel Name="spHChart" Visibility="Collapsed">
+            </StackPanel>
+
+            <StackPanel Name="spVChart" Visibility="Visible">
+
+                <!--<syncfusion:SfChart>
+                    <syncfusion:SfChart.PrimaryAxis>
+                        <syncfusion:CategoryAxis Header="Name" />
+                    </syncfusion:SfChart.PrimaryAxis>
+                    <syncfusion:SfChart.SecondaryAxis>
+                        <syncfusion:NumericalAxis Header="Value"/>
+                    </syncfusion:SfChart.SecondaryAxis>
+                    <syncfusion:ColumnSeries  ItemsSource="{Binding graphs}" XBindingPath="Name" YBindingPath="Value" >
+                    </syncfusion:ColumnSeries>
+                </syncfusion:SfChart>-->
+            </StackPanel>
+
 
         </StackPanel>
 
